# demand-fc

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
demand_forecasting/: features.py  generate_features.py  predict.py  preprocess.py  preprocess_data.py  read.py  testing_code.ipynb  train.py  verify.py  verify_data.py
notebooks/: analysing.ipynb  hp_tuning_and_evaluation.ipynb  hyperparameter_tuning.ipynb  playing_around.ipynb  testing_code.ipynb
output/: predictions.csv
tests/demand_forecasting/: test_features.py  test_preprocess.py  test_read.py  test_verify.py
