[tool.poetry]
name = "demand_fc"
version = "0.1.0"
description = "Predicting demand of scooters in Voiholm"
authors = ["Lovisa Grönros"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
