[tool.poetry]
name = "demand_forecasting"
version = "0.1.0"
description = "Predicting demand of scooters in Voiholm"
authors = ["Lovisa Grönros"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
pandas = "^2.1.3"
ipykernel = "^6.27.1"
pandera = "^0.17.2"
logging = "^0.4.9.6"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
